--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.5+3
   firebase_database: ^3.1.3
+  cloud_firestore: ^0.13.4+2
   provider: ^4.0.4
   flutter_spinkit: "^4.1.2"
   local_auth_device_credentials: ^0.6.3+8
